<resources>
    <string name="app_name">SCOS</string>
    <string name="food_name">菜名</string>
    <string name="food_price">价格</string>
    <string name="cold_food">冷菜</string>
    <string name="hot_food">热菜</string>
    <string name="seafood">海鲜</string>
    <string name="drinks">酒水</string>
    <string name="order_food">点菜</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="system_help">系统帮助</string>
    <string name="login_or_register">登录/注册</string>
    <string name="review_order">查看订单</string>
    <string name="has_ordered">已点</string>
    <string name="call_service">呼叫服务</string>
</resources>
